[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fps-analyzer"
version = "0.1.0"
description = "Count frames per second and average FPS using ffprobe (low memory, VFR/CFR)."
readme = "README.md"
requires-python = ">=3.8"
authors = [{ name = "You" }]
license = { text = "MIT" }
keywords = ["video", "ffmpeg", "ffprobe", "fps", "vfr", "cli"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Environment :: Console",
  "Operating System :: OS Independent",
  "Topic :: Multimedia :: Video"
]
dependencies = []

[project.scripts]
fps-analyzer = "fps_analyzer.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["fps_analyzer*"]